/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details take a look at the 'Building Java & JVM projects' chapter in the Gradle
 * User Manual available at https://docs.gradle.org/7.4/userguide/building_java_projects.html
 */


plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

sourceCompatibility = 17

dependencies {
    // Use JUnit Jupiter for testing.
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'

    // This dependency is used by the application.
    implementation 'com.google.guava:guava:30.1.1-jre'

    implementation group: 'org.capnproto', name: 'runtime', version: '0.1.14'
    implementation group: 'com.opencsv', name: 'opencsv', version: '5.7.0'
    implementation group: 'com.github.javaparser', name: 'javaparser-symbol-solver-core', version: '3.24.2'
    implementation group: 'org.jgrapht', name: 'jgrapht-core', version: '1.5.1'
    implementation group: 'org.jgrapht', name: 'jgrapht-io', version: '1.5.1'
    implementation group: 'org.jetbrains', name: 'annotations', version: '16.0.2'
    implementation group: 'org.javatuples', name: 'javatuples', version: '1.2'
    implementation group: 'info.picocli', name: 'picocli', 'version': '4.6.3'
    annotationProcessor group: 'info.picocli', name: 'picocli-codegen', version: '4.6.3'
}

compileJava {
    options.compilerArgs += ["-Aproject=${project.group}/${project.name}"]
}

application {
    // Define the main class for the application.
    mainClass = 'edu.ncsu.lab.ast_tagger.App'
    run {
        jvmArgs += '--enable-preview'
        ignoreExitValue = true
        workingDir = file("..")
    }
}

tasks.withType(JavaCompile) {
    options.compilerArgs << '--enable-preview'
}